--- a/assets/custom.css
+++ b/assets/custom.css
@@ -283,3 +283,28 @@ span.playIcon::before {
   width: 110%;
   background: white;
 }
+
+.post_thumb>div>* {
+  margin: auto;
+}
+
+.loader {
+  border: 4px solid #f3f3f3;
+  /* Light grey */
+  border-top: 4px solid #5433ed;
+  /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
