--- a/style.css
+++ b/style.css
@@ -1960,11 +1960,6 @@ body {
   position: relative;
 }
 
-.sticky {
-  position: -webkit-sticky;
-  position: sticky;
-}
-
 .inset-x-1\/2 {
   left: 50%;
   right: 50%;
@@ -2030,12 +2025,12 @@ body {
   z-index: 10;
 }
 
-.z-20 {
-  z-index: 20;
-}
-
 .z-0 {
   z-index: 0;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .z-\[10\] {
@@ -2057,6 +2052,11 @@ body {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .-mx-2 {
@@ -2084,6 +2084,11 @@ body {
   margin-right: 1rem;
 }
 
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -2097,16 +2102,6 @@ body {
 .mx-7 {
   margin-left: 1.75rem;
   margin-right: 1.75rem;
-}
-
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 
 .mr-2 {
@@ -2153,6 +2148,22 @@ body {
   margin-bottom: 1rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mb-24 {
+  margin-bottom: 6rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .mt-0 {
   margin-top: 0px;
 }
@@ -2165,20 +2176,12 @@ body {
   margin-bottom: 4rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .mr-4 {
   margin-right: 1rem;
 }
 
 .ml-4 {
   margin-left: 1rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
 }
 
 .mt-32 {
@@ -2193,8 +2196,12 @@ body {
   margin-top: 6rem;
 }
 
-.mb-24 {
-  margin-bottom: 6rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .mt-1 {
@@ -2205,12 +2212,16 @@ body {
   margin-right: 0.75rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .mr-0 {
@@ -2241,14 +2252,6 @@ body {
   margin-bottom: -0.25rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .block {
   display: block;
 }
@@ -2273,8 +2276,20 @@ body {
   aspect-ratio: 16/10.7;
 }
 
+.aspect-\[4\/3\] {
+  aspect-ratio: 4/3;
+}
+
 .aspect-\[16\/11\.5\] {
   aspect-ratio: 16/11.5;
+}
+
+.h-\[150px\] {
+  height: 150px;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .h-full {
@@ -2289,16 +2304,16 @@ body {
   height: 0.25rem;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .h-20 {
   height: 5rem;
 }
 
 .h-16 {
   height: 4rem;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .h-\[426px\] {
@@ -2315,6 +2330,16 @@ body {
 
 .h-10 {
   height: 2.5rem;
+}
+
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-\[40px\] {
+  height: 40px;
 }
 
 .h-\[30\%\] {
@@ -2337,42 +2362,24 @@ body {
   height: 1.25rem;
 }
 
-.h-40 {
-  height: 10rem;
+.h-32 {
+  height: 8rem;
 }
 
-.h-\[\] {
-  height: ;
+.h-\[14px\] {
+  height: 14px;
 }
 
-.h-\[110px\] {
-  height: 110px;
-}
-
-.h-\[120px\] {
-  height: 120px;
-}
-
-.h-\[150px\] {
-  height: 150px;
-}
-
-.h-\[20px\] {
-  height: 20px;
-}
-
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-fit {
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+.h-48 {
+  height: 12rem;
 }
 
 .min-h-full {
   min-height: 100%;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .w-full {
@@ -2399,10 +2406,6 @@ body {
   width: 5rem;
 }
 
-.w-40 {
-  width: 10rem;
-}
-
 .w-fit {
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -2419,6 +2422,18 @@ body {
 
 .w-\[97\%\] {
   width: 97%;
+}
+
+.w-\[30px\] {
+  width: 30px;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .w-auto {
@@ -2461,6 +2476,10 @@ body {
   max-width: 1232px;
 }
 
+.max-w-2xl {
+  max-width: 42rem;
+}
+
 .max-w-md {
   max-width: 28rem;
 }
@@ -2473,8 +2492,8 @@ body {
   max-width: 48rem;
 }
 
-.max-w-2xl {
-  max-width: 42rem;
+.max-w-\[1300px\] {
+  max-width: 1300px;
 }
 
 .max-w-screen-xl {
@@ -2595,6 +2614,10 @@ body {
   overflow: hidden;
 }
 
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .rounded-\[2rem\] {
   border-radius: 2rem;
 }
@@ -2605,6 +2628,10 @@ body {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-xl {
@@ -2621,14 +2648,6 @@ body {
 
 .rounded-2xl {
   border-radius: 1rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .border {
@@ -2652,6 +2671,15 @@ body {
   border-color: rgb(84 51 237 / var(--tw-border-opacity));
 }
 
+.border-\[\#3333335e\] {
+  border-color: #3333335e;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .border-secondary {
   --tw-border-opacity: 1;
   border-color: rgb(43 212 217 / var(--tw-border-opacity));
@@ -2672,26 +2700,12 @@ body {
   border-color: rgb(249 250 251 / var(--tw-border-opacity));
 }
 
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-\[\#333\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(51 51 51 / var(--tw-border-opacity));
-}
-
-.border-\[\#3333335e\] {
-  border-color: #3333335e;
+.border-opacity-10 {
+  --tw-border-opacity: 0.1;
 }
 
 .border-opacity-60 {
   --tw-border-opacity: 0.6;
-}
-
-.border-opacity-10 {
-  --tw-border-opacity: 0.1;
 }
 
 .bg-black {
@@ -2804,16 +2818,20 @@ body {
   padding: 1.25rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-8 {
+  padding: 2rem;
+}
+
+.p-3\.5 {
+  padding: 0.875rem;
 }
 
 .p-3 {
   padding: 0.75rem;
 }
 
-.p-8 {
-  padding: 2rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .p-1\.5 {
@@ -2822,10 +2840,6 @@ body {
 
 .p-1 {
   padding: 0.25rem;
-}
-
-.p-3\.5 {
-  padding: 0.875rem;
 }
 
 .p-2 {
@@ -2857,6 +2871,11 @@ body {
   padding-bottom: 0.5rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -2882,24 +2901,24 @@ body {
   padding-right: 0.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .px-10 {
@@ -2920,16 +2939,6 @@ body {
 .\!px-7 {
   padding-left: 1.75rem !important;
   padding-right: 1.75rem !important;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .pt-32 {
@@ -2976,6 +2985,18 @@ body {
   padding-bottom: 0.75rem;
 }
 
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
 .pt-8 {
   padding-top: 2rem;
 }
@@ -2992,10 +3013,6 @@ body {
   padding-bottom: 5rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
 .pt-12 {
   padding-top: 3rem;
 }
@@ -3004,12 +3021,20 @@ body {
   padding-bottom: 11rem;
 }
 
-.pt-24 {
-  padding-top: 6rem;
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .pb-6 {
   padding-bottom: 1.5rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .pt-1 {
@@ -3036,10 +3061,6 @@ body {
   padding-top: 0.5rem;
 }
 
-.pb-32 {
-  padding-bottom: 8rem;
-}
-
 .pr-6 {
   padding-right: 1.5rem;
 }
@@ -3060,24 +3081,12 @@ body {
   padding-left: 0.25rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
-}
-
-.text-right {
-  text-align: right;
 }
 
 .text-3xl {
@@ -3100,6 +3109,11 @@ body {
   line-height: 2rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .text-\[18px\] {
   font-size: 18px;
 }
@@ -3107,11 +3121,6 @@ body {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .text-base {
@@ -3127,6 +3136,10 @@ body {
   font-weight: 600;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
@@ -3137,10 +3150,6 @@ body {
 
 .leading-none {
   line-height: 1;
-}
-
-.leading-tight {
-  line-height: 1.25;
 }
 
 .text-primary {
@@ -3163,16 +3172,6 @@ body {
   color: rgb(43 212 217 / var(--tw-text-opacity));
 }
 
-.text-text-light {
-  --tw-text-opacity: 1;
-  color: rgb(113 113 113 / var(--tw-text-opacity));
-}
-
-.text-text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .text-\[\#9C90B5\] {
   --tw-text-opacity: 1;
   color: rgb(156 144 181 / var(--tw-text-opacity));
@@ -3181,6 +3180,16 @@ body {
 .text-\[\#5433ED\] {
   --tw-text-opacity: 1;
   color: rgb(84 51 237 / var(--tw-text-opacity));
+}
+
+.text-text-light {
+  --tw-text-opacity: 1;
+  color: rgb(113 113 113 / var(--tw-text-opacity));
+}
+
+.text-text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -3196,12 +3205,12 @@ body {
   opacity: 0.6;
 }
 
-.opacity-20 {
-  opacity: 0.2;
-}
-
 .opacity-50 {
   opacity: 0.5;
+}
+
+.opacity-20 {
+  opacity: 0.2;
 }
 
 .shadow-button-primary {
@@ -3248,6 +3257,13 @@ body {
   transition-duration: 0.7s;
 }
 
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
 /**
  * Custom styles to immediately follow Tailwind’s `utilities` layer
  *
@@ -3279,6 +3295,11 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:bg-primary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(84 51 237 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-secondary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(43 212 217 / var(--tw-bg-opacity));
@@ -3286,6 +3307,11 @@ body {
 
 .hover\:bg-opacity-5:hover {
   --tw-bg-opacity: 0.05;
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:text-secondary:hover {
@@ -3296,6 +3322,12 @@ body {
 .hover\:shadow-button-primary-hover:hover {
   --tw-shadow: 0 13px 25px #5433ED52;
   --tw-shadow-colored: 0 13px 25px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-custom-2:hover {
+  --tw-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  --tw-shadow-colored: 0px 10px 20px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -3353,6 +3385,11 @@ body {
     top: 3.5rem;
   }
 
+  .md\:my-28 {
+    margin-top: 7rem;
+    margin-bottom: 7rem;
+  }
+
   .md\:mr-0 {
     margin-right: 0px;
   }
@@ -3373,12 +3410,24 @@ body {
     display: flex;
   }
 
+  .md\:min-h-\[48px\] {
+    min-height: 48px;
+  }
+
   .md\:w-\[700px\] {
     width: 700px;
   }
 
   .md\:w-2\/3 {
     width: 66.666667%;
+  }
+
+  .md\:w-\[38px\] {
+    width: 38px;
+  }
+
+  .md\:w-10\/12 {
+    width: 83.333333%;
   }
 
   .md\:max-w-3xl {
@@ -3389,12 +3438,12 @@ body {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -3403,6 +3452,10 @@ body {
 
   .md\:items-center {
     align-items: center;
+  }
+
+  .md\:gap-32 {
+    gap: 8rem;
   }
 
   .md\:gap-16 {
@@ -3418,6 +3471,11 @@ body {
     padding: 3rem;
   }
 
+  .md\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -3426,11 +3484,6 @@ body {
   .md\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
-  }
-
-  .md\:py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
   }
 
   .md\:pb-28 {
@@ -3449,9 +3502,18 @@ body {
     padding-bottom: 15rem;
   }
 
+  .md\:text-right {
+    text-align: right;
+  }
+
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .md\:text-2xl {
@@ -3459,9 +3521,9 @@ body {
     line-height: 2rem;
   }
 
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
@@ -3749,6 +3811,10 @@ body {
     margin-top: 8rem;
   }
 
+  .lg\:mb-60 {
+    margin-bottom: 15rem;
+  }
+
   .lg\:mt-28 {
     margin-top: 7rem;
   }
@@ -3785,6 +3851,10 @@ body {
     margin-top: 10rem;
   }
 
+  .lg\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
   .lg\:mt-2 {
     margin-top: 0.5rem;
   }
@@ -3811,6 +3881,10 @@ body {
 
   .lg\:h-24 {
     height: 6rem;
+  }
+
+  .lg\:min-h-\[50px\] {
+    min-height: 50px;
   }
 
   .lg\:w-7\/12 {
@@ -3849,6 +3923,26 @@ body {
     width: 107%;
   }
 
+  .lg\:w-\[41px\] {
+    width: 41px;
+  }
+
+  .lg\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .lg\:w-44 {
+    width: 11rem;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
+  .lg\:w-3\/4 {
+    width: 75%;
+  }
+
   .lg\:w-96 {
     width: 24rem;
   }
@@ -3861,16 +3955,8 @@ body {
     width: 45%;
   }
 
-  .lg\:w-3\/4 {
-    width: 75%;
-  }
-
   .lg\:w-\[100\%\] {
     width: 100%;
-  }
-
-  .lg\:w-1\/4 {
-    width: 25%;
   }
 
   .lg\:max-w-\[72\%\] {
@@ -3895,6 +3981,10 @@ body {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -3931,6 +4021,10 @@ body {
 
   .lg\:p-16 {
     padding: 4rem;
+  }
+
+  .lg\:p-4 {
+    padding: 1rem;
   }
 
   .lg\:p-8 {
@@ -3982,6 +4076,18 @@ body {
     padding-top: 6rem;
   }
 
+  .lg\:pt-48 {
+    padding-top: 12rem;
+  }
+
+  .lg\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .lg\:pb-20 {
+    padding-bottom: 5rem;
+  }
+
   .lg\:pl-4 {
     padding-left: 1rem;
   }
@@ -4010,6 +4116,10 @@ body {
     padding-left: 3rem;
   }
 
+  .lg\:pr-10 {
+    padding-right: 2.5rem;
+  }
+
   .lg\:pt-32 {
     padding-top: 8rem;
   }
@@ -4018,20 +4128,12 @@ body {
     padding-top: 5rem;
   }
 
-  .lg\:pb-20 {
-    padding-bottom: 5rem;
-  }
-
   .lg\:pl-8 {
     padding-left: 2rem;
   }
 
   .lg\:pl-0 {
     padding-left: 0px;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px;
   }
 
   .lg\:text-5xl {
@@ -4682,6 +4784,11 @@ body {
     text-align: start;
   }
 
+  .xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
   .xl\:text-\[2\.875rem\] {
     font-size: 2.875rem;
   }
@@ -4689,11 +4796,6 @@ body {
   .xl\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
-  }
-
-  .xl\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 }
 
